--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Love Buble";
-  src: url("/fonts/Love-Buble.otf") format("opentype");
+  src: url("/balentayms/fonts/Love-Buble.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
